tested addRecipe in CatalogController